--- a/index.html
+++ b/index.html
@@ -7,44 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        
-    </style>
 </head>
 <body>
     <!-- ナビゲーションバー -->
-    <nav class="navbar navbar-expand-lg sticky-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <i class="bi bi-heart-fill text-danger"></i> KicksLog
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">ホーム</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="sneaker-list.html">ペット図鑑</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="care-guide.html">飼い方ガイド</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="sneaker-faq.html">FAQ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="coordinate-log.html">コーデ記録数</a>
-                    </li>
-                </ul>
-                <button class="btn btn-outline-success ms-3 rounded-pill fw-bold">
-                    <i class="bi bi-person-circle"></i> ログイン
-                </button>
-            </div>
-        </div>
-    </nav>
+    <div id="navbar-placeholder"></div>
 
     <!-- ヒーローセクション -->
     <div class="hero-section">
@@ -58,16 +24,16 @@
                         スニーカーライフをより充実させるための情報サイト。<br>新作情報、メンテナンス方法、コーディネート記録まで網羅！
                     </p>
                     <div class="d-flex gap-3">
-                        <button class="btn btn-primary-custom">
+                        <button class="btn btn-primary-custom" onclick="location.href='sneaker-list.html'">
                             <i class="bi bi-search"></i> コレクションを見る
                         </button>
-                        <button class="btn btn-outline-dark rounded-pill px-4 py-3 fw-bold">
+                        <button class="btn btn-outline-dark rounded-pill px-4 py-3 fw-bold" onclick="location.href='care-guide.html'">
                             <i class="bi bi-book"></i> 手入れ方法を知る
                         </button>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center">
-                    <img src="https://placehold.co/500x400/10b981/ffffff?text=Nice+Kicks" class="hero-image" alt="ペットイラスト">
+                    <img src="https://placehold.co/500x400/10b981/ffffff?text=Nice+Kicks" class="hero-image" alt="スニーカーイラスト">
                 </div>
             </div>
         </div>
@@ -104,7 +70,7 @@
 
         <!-- 今月のPick Up -->
         <section class="mb-5">
-            <h2 class="text-center fw-bold section-title" style="color: var(--brown-color);">
+            <h2 class="text-center fw-bold section-title">
                 <i class="bi bi-star-fill text-warning"></i> 今月のPick Up
             </h2>
             <p class="text-center text-muted mb-5">今話題の注目スニーカーをご紹介</p>
@@ -131,7 +97,7 @@
                                     <div class="text-warning">★★★★★</div>
                                 </div>
                             </div>
-                            <button class="btn btn-outline-success rounded-pill w-100">
+                            <button class="btn btn-outline-success rounded-pill w-100" onclick="location.href='sneaker-detail.html'">
                                 詳細を見る <i class="bi bi-arrow-right"></i>
                             </button>
                         </div>
@@ -159,7 +125,7 @@
                                     <div class="text-warning">★★★★★</div>
                                 </div>
                             </div>
-                            <button class="btn btn-outline-warning rounded-pill w-100">
+                            <button class="btn btn-outline-warning rounded-pill w-100" onclick="location.href='sneaker-detail.html'">
                                 詳細を見る <i class="bi bi-arrow-right"></i>
                             </button>
                         </div>
@@ -187,7 +153,7 @@
                                     <div class="text-warning">★★★★☆</div>
                                 </div>
                             </div>
-                            <button class="btn btn-outline-info rounded-pill w-100">
+                            <button class="btn btn-outline-info rounded-pill w-100" onclick="location.href='sneaker-detail.html'">
                                 詳細を見る <i class="bi bi-arrow-right"></i>
                             </button>
                         </div>
@@ -215,7 +181,7 @@
                                     <div class="text-warning">★★★★☆</div>
                                 </div>
                             </div>
-                            <button class="btn rounded-pill w-100" style="border: 2px solid #8b5cf6; color: #8b5cf6;">
+                            <button class="btn rounded-pill w-100" style="border: 2px solid #8b5cf6; color: #8b5cf6;" onclick="location.href='sneaker-detail.html'">
                                 詳細を見る <i class="bi bi-arrow-right"></i>
                             </button>
                         </div>
@@ -243,7 +209,7 @@
                                     <div class="text-warning">★★★☆☆</div>
                                 </div>
                             </div>
-                            <button class="btn rounded-pill w-100" style="border: 2px solid #14b8a6; color: #14b8a6;">
+                            <button class="btn rounded-pill w-100" style="border: 2px solid #14b8a6; color: #14b8a6;" onclick="location.href='sneaker-detail.html'">
                                 詳細を見る <i class="bi bi-arrow-right"></i>
                             </button>
                         </div>
@@ -271,7 +237,7 @@
                                     <div class="text-warning">★★★★☆</div>
                                 </div>
                             </div>
-                            <button class="btn btn-outline-primary rounded-pill w-100">
+                            <button class="btn btn-outline-primary rounded-pill w-100" onclick="location.href='sneaker-detail.html'">
                                 詳細を見る <i class="bi bi-arrow-right"></i>
                             </button>
                         </div>
@@ -282,10 +248,10 @@
 
         <!-- サービス特徴 -->
         <section class="mb-5">
-            <h2 class="text-center fw-bold section-title" style="color: var(--brown-color);">
+            <h2 class="text-center fw-bold section-title">
                 <i class="bi bi-check-circle-fill text-success"></i> KicksLogの特徴
             </h2>
-            <p class="text-center text-muted mb-5">ペットライフを全力でサポート</p>
+            <p class="text-center text-muted mb-5">スニーカーライフを全力でサポート</p>
 
             <div class="row g-4">
                 <div class="col-md-4">
@@ -315,7 +281,7 @@
                         <div class="feature-icon">
                             <i class="bi bi-journal-text"></i>
                         </div>
-                        <h4 class="fw-bold mb-3">コーデ記録数管理</h4>
+                        <h4 class="fw-bold mb-3">コーデ記録管理</h4>
                         <p class="text-muted">
                             その日のコーディネートと足元を写真で記録して振り返れます。
                         </p>
@@ -326,52 +292,52 @@
 
         <!-- ブランドから探す -->
         <section class="mb-5">
-            <h2 class="text-center fw-bold section-title" style="color: var(--brown-color);">
+            <h2 class="text-center fw-bold section-title">
                 <i class="bi bi-grid-3x3-gap-fill"></i> ブランドから探す
             </h2>
             <p class="text-center text-muted mb-5">お気に入りのブランドをチェック</p>
 
             <div class="row g-3">
                 <div class="col-6 col-md-3">
-                    <a href="#" class="text-decoration-none">
+                    <a href="sneaker-list.html" class="text-decoration-none">
                         <div class="feature-card">
                             <div class="feature-icon" style="background: rgba(251, 146, 60, 0.1); color: var(--secondary-color);">
                                 <i class="bi bi-heart-fill"></i>
                             </div>
-                            <h5 class="fw-bold" style="color: var(--brown-color);">NIKE</h5>
+                            <h5 class="fw-bold text-brown">NIKE</h5>
                             <small class="text-muted">120 Models</small>
                         </div>
                     </a>
                 </div>
                 <div class="col-6 col-md-3">
-                    <a href="#" class="text-decoration-none">
+                    <a href="sneaker-list.html" class="text-decoration-none">
                         <div class="feature-card">
                             <div class="feature-icon" style="background: rgba(251, 146, 60, 0.1); color: #fb923c;">
                                 <i class="bi bi-balloon-heart"></i>
                             </div>
-                            <h5 class="fw-bold" style="color: var(--brown-color);">ADIDAS</h5>
+                            <h5 class="fw-bold text-brown">ADIDAS</h5>
                             <small class="text-muted">80 Models</small>
                         </div>
                     </a>
                 </div>
                 <div class="col-6 col-md-3">
-                    <a href="#" class="text-decoration-none">
+                    <a href="sneaker-list.html" class="text-decoration-none">
                         <div class="feature-card">
                             <div class="feature-icon" style="background: rgba(6, 182, 212, 0.1); color: #06b6d4;">
                                 <i class="bi bi-brightness-alt-high"></i>
                             </div>
-                            <h5 class="fw-bold" style="color: var(--brown-color);">New Balance</h5>
+                            <h5 class="fw-bold text-brown">New Balance</h5>
                             <small class="text-muted">45 Models</small>
                         </div>
                     </a>
                 </div>
                 <div class="col-6 col-md-3">
-                    <a href="#" class="text-decoration-none">
+                    <a href="sneaker-list.html" class="text-decoration-none">
                         <div class="feature-card">
                             <div class="feature-icon" style="background: rgba(139, 92, 246, 0.1); color: #8b5cf6;">
                                 <i class="bi bi-cloud"></i>
                             </div>
-                            <h5 class="fw-bold" style="color: var(--brown-color);">VANS</h5>
+                            <h5 class="fw-bold text-brown">VANS</h5>
                             <small class="text-muted">35 Models</small>
                         </div>
                     </a>
@@ -381,47 +347,14 @@
     </div>
 
     <!-- フッター -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 mb-4">
-                    <h5 class="fw-bold mb-3">
-                        <i class="bi bi-heart-fill text-danger"></i> KicksLog
-                    </h5>
-                    <p>スニーカーライフをより楽しくする情報サイト</p>
-                </div>
-                <div class="col-md-2 mb-4">
-                    <h6 class="fw-bold mb-3">サイト情報</h6>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-white text-decoration-none">About</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">利用規約</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">プライバシー</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-2 mb-4">
-                    <h6 class="fw-bold mb-3">サポート</h6>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-white text-decoration-none">ヘルプ</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">Contact</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">FAQ</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <h6 class="fw-bold mb-3">フォローする</h6>
-                    <div class="d-flex gap-3">
-                        <a href="#" class="text-white fs-4"><i class="bi bi-twitter"></i></a>
-                        <a href="#" class="text-white fs-4"><i class="bi bi-instagram"></i></a>
-                        <a href="#" class="text-white fs-4"><i class="bi bi-youtube"></i></a>
-                        <a href="#" class="text-white fs-4"><i class="bi bi-facebook"></i></a>
-                    </div>
-                </div>
-            </div>
-            <hr class="border-light">
-            <p class="text-center mb-0">&copy; 2024 KicksLog. All rights reserved.</p>
-        </div>
-    </footer>
+    <div id="footer-placeholder"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/components.js"></script>
+    <script>
+        renderNavbar('home');
+        renderFooter();
+    </script>
 </body>
 </html>
 
